--- a/LatteMarcheML.csproj
+++ b/LatteMarcheML.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.95.3" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.11.3" />
+    <PackageReference Include="Microsoft.ML" Version="1.5.1" />
     <PackageReference Include="NPOI" Version="2.5.1" />
   </ItemGroup>
 
