--- a/LatteMarcheML.csproj
+++ b/LatteMarcheML.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="ClosedXML" Version="0.95.3" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.11.3" />
     <PackageReference Include="Microsoft.ML" Version="1.5.1" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="1.5.1" />
     <PackageReference Include="NPOI" Version="2.5.1" />
   </ItemGroup>
 
