--- a/LatteMarcheML.csproj
+++ b/LatteMarcheML.csproj
@@ -10,7 +10,9 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.11.3" />
     <PackageReference Include="Microsoft.ML" Version="1.5.1" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="1.5.1" />
+    <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.5.1" />
     <PackageReference Include="NPOI" Version="2.5.1" />
+    <PackageReference Include="PLplot" Version="5.13.7" />
   </ItemGroup>
 
 </Project>
